# gemini-cli-rs

./: Cargo.toml  README.md
.github/workflows/: openwrt-aarch64.yml
src/: app.rs  auth.rs  cli.rs  config.rs  main.rs  paths.rs  tui.rs
src/mcp/: mod.rs  stdio.rs  tools.rs
src/provider/: google.rs  mod.rs  stub.rs  types.rs
