[package]
name = "gemini"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Musl-friendly HTTP client (no OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Streaming primitives
futures-core = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Config (optional for Phase A, but useful scaffolding)
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
