[package]
name = "gemini"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }

# Musl-friendly HTTP client (no OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Streaming primitives
futures-core = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Optional UI (feature = "tui")
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }

# Optional MCP client (feature = "mcp")

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["google"]

# Google Gemini provider (Generative Language API).
google = []

# Terminal UI chat.
tui = ["dep:ratatui", "dep:crossterm"]

# MCP stdio client and tool registry.
mcp = []

[profile.release]
strip = true
lto = true
codegen-units = 1
